--- a/assets/style/_root.scss
+++ b/assets/style/_root.scss
@@ -188,35 +188,35 @@ p{
     color: $-blue;
 }
 
-// .sectionScroll {
-//     opacity: 0;
-//     visibility: hidden;
-//     // transform: translate(0px, 50px);
-//     transition: opacity 0.5s ease, transform 0.5s ease;
-// }
+.sectionScroll {
+    opacity: 0;
+    visibility: hidden;
+    // transform: translate(0px, 50px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
 
-// .animate {
-//     opacity: 1;
-//     visibility: visible;
-//     transform: translate(0px, 0px);
-//     animation: example 2s  ;
-// }
+.animate {
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0px, 0px);
+    animation: example 2s  ;
+}
 
 
-// @keyframes example {
-//     from {
-//         opacity: 0;
-//         visibility: hidden;
-//         transform: translateY(var(--startScrollTop, 150px)); 
-//         // transform: translate(-100%, 100vh); 
-//     }
-//     to {
-//         opacity: 1;
-//         visibility: visible;
-//         transform: translateY(calc(var(--scrollTop) / 10)); 
-//         // transform: translate(0, 0); 
-//     }
-// }
+@keyframes example {
+    from {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(var(--startScrollTop, 150px)); 
+        // transform: translate(-100%, 100vh); 
+    }
+    to {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(calc(var(--scrollTop) / 10)); 
+        // transform: translate(0, 0); 
+    }
+}
 .white-block{
     display: inline-flex;
     padding: 10px 20px;
