--- a/assets/style/_gallery-section.scss
+++ b/assets/style/_gallery-section.scss
@@ -1,5 +1,61 @@
 .gallery{
     &__container{
+        &-wrap{
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+            &-btns{
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                overflow: hidden;
+
+                @media screen and (max-width:767px){
+                    overflow-x: scroll;
+                } 
+                &-btn{
+                    display: flex;
+                    padding: 13px 38px;
+                    white-space: nowrap;
+                    cursor: pointer;
+                    border: 1px solid $-blue;
+                    align-items: center;
+                    justify-content: center;
+                    color: $-blue;
+                    max-width: fit-content;
+                    border-radius: 500px;
+                    transition: .3s ease;
+                    &:hover{
+                        background-color: $-blue;
+                    color: $-white;
+                    }
+                }
+                .active-tab {
+                    background-color: $-blue;
+                    color: $-white;
+                }
+            }
+            &-content{
+                display: grid;
+                gap: 20px;
+                grid-template-columns: repeat(3, 1fr);
+               
+                & img{
+                    object-fit: cover;
+                    max-width: 100%;
+                }
+               @media screen and (max-width:767px) {
+                grid-template-columns: repeat(2, 1fr);
+               }
+               @media screen and (max-width:550px) {
+                display: flex;
+                flex-direction: column;
+               }
+                
+            }
+        }
+
+
         .gallery-button-prev,
         .gallery-button-next{
                 border-color: $-blue;
