--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -11,3 +11,5 @@
 @import './consultation-section.scss';
 @import './footer.scss';
 @import './area-section.scss';
+@import './estimate-section.scss';
+@import './contact-section.scss';
