--- a/assets/style/_area-section.scss
+++ b/assets/style/_area-section.scss
@@ -52,13 +52,12 @@
         }
         &-map{
             border-radius: 20px;
-            iframe{
-                border-radius: 20px;
+            & img{
+                border-radius: inherit;
                 max-width: 100%;
-                width: 100%;
+                object-fit: cover;
                 height: 100%;
                 @media screen and (max-width:990px) {
-                    grid-row: 1 / 1;
                     min-height: 560px;
                     height: 100%;
                 }
@@ -66,6 +65,7 @@
                     min-height: 360px;
                 }
             }
+            
         }
         
         
