--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,6 +1,7 @@
 @import './reset.scss';
 @import './root.scss';
 @import './header.scss';
+@import './universal-style.scss';
 @import './main.scss';
 @import './advantages-section.scss';
 @import './services-section.scss';
@@ -13,3 +14,9 @@
 @import './area-section.scss';
 @import './estimate-section.scss';
 @import './contact-section.scss';
+@import './front-section.scss';
+@import './details-section.scss';
+@import './book-section.scss';
+@import './paint-section.scss';
+@import './benefits-section.scss';
+@import './clients-section.scss';
