--- a/assets/style/_advantages-section.scss
+++ b/assets/style/_advantages-section.scss
@@ -22,6 +22,7 @@
                         position: relative;
                         overflow: hidden;
                         gap: 120px;
+
                         @media screen and (max-width:990px) {
                             padding: 20px;
                            
@@ -46,6 +47,7 @@
                             left: 0;
                             width: 430px;
                             height: 430px;
+                            z-index: -1;
                            & .circle{
                             position: absolute;
                             border-radius: 50%;
@@ -87,14 +89,15 @@
                             }
                            }
                         }
-
                     }
                         &-content{
-                      display: flex;
-                      flex-direction: column;
-                    
+                        display: flex;
+                        flex-direction: column;
+                        // justify-content: space-between;
+                            flex-grow: 1;
+                            gap: 15px;
                        & h3{
-                        margin-bottom: 15px;
+                        min-height: 27px;
                         font-size: 20px;
                         font-style: normal;
                         font-weight: 700;
@@ -102,7 +105,7 @@
                         color: $-blue;
                         }
                     & p:not(:nth-last-of-type(1)){
-                        margin-bottom: 15px;
+                        // margin-bottom: 15px;
                     }
                     }
                 }
@@ -175,12 +178,16 @@
                         display: flex;
                         flex-direction: column;
                         gap: 20px;
+                        flex-grow: 1;
+                        justify-content: space-between;
                         & h3{
                             font-size: 24px;
                             font-style: normal;
                             font-weight: 700;
                             line-height: normal;
                             text-transform: uppercase;
+                            min-height: 66px;
+
                         }
                         
                     }
