--- a/assets/style/_services-section.scss
+++ b/assets/style/_services-section.scss
@@ -34,20 +34,25 @@
                     border-radius: 0 0 20px 20px;
                     border:1px solid $-blue;
                     border-top: none;
-                    align-content: stretch;
                     flex-grow: 1;
-
+                    gap: 10px;
                     & h3{
                         font-size: 24px;
-                        font-style: normal;
-                        font-weight: 500;
-                        line-height: normal;
-                        color: $-blue;
-                        margin-bottom: 10px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: $-blue;
+    min-height: 66px;
+    max-height: 66px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical; 
+    text-overflow: ellipsis;
                     }
                     & p{
                         font-size: 14px;
-                        margin-bottom: 20px;
+                        margin-bottom: 10px;
                     }
                     & .btn{
                         max-width: 100%;
