--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -130,6 +130,11 @@ h1 {
   font-weight: 700;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 367px) {
+  h1 {
+    font-size: 32px;
+  }
+}
 
 .single-title {
   font-size: 32px;
@@ -141,6 +146,11 @@ h2 {
   font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
+}
+@media screen and (max-width: 367px) {
+  h2 {
+    font-size: 26px;
+  }
 }
 
 h1 span,
@@ -282,6 +292,30 @@ p {
   justify-content: space-between;
   margin-bottom: 40px;
   color: #004B98;
+}
+.row-title p {
+  max-width: 380px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 990px) {
+  .row-title p {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 990px) {
+  .row-title {
+    flex-direction: column;
+    max-width: 500px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 40px;
+  }
 }
 
 .white-block {
@@ -615,6 +649,70 @@ p {
   }
 }
 
+.grid-container img {
+  border-radius: 20px 20px 0px 0px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: 100%;
+  max-height: 400px;
+  min-height: 360px;
+  height: 100%;
+}
+.grid-container-content {
+  display: flex;
+}
+@media screen and (max-width: 867px) {
+  .grid-container-content {
+    flex-direction: column;
+  }
+}
+.grid-container-content-info {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  border-radius: 0px 0px 0px 20px;
+  background-color: #004B98;
+  width: 36.3%;
+  gap: 40px;
+}
+@media screen and (max-width: 867px) {
+  .grid-container-content-info {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .grid-container-content-info {
+    padding: 20px;
+  }
+}
+.grid-container-content-info span {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  color: #ffffff;
+}
+.grid-container-content-description {
+  width: 63.7%;
+  flex-grow: 1;
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 0px 0px 20px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+@media screen and (max-width: 867px) {
+  .grid-container-content-description {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .grid-container-content-description {
+    padding: 20px;
+  }
+}
+
 .main__container {
   background: url(../images/main-img.jpg) center center/cover no-repeat;
   border-radius: 20px;
@@ -685,6 +783,7 @@ p {
   left: 0;
   width: 430px;
   height: 430px;
+  z-index: -1;
 }
 .advantages__container-top-wrapper-item-icon .circles .circle {
   position: absolute;
@@ -729,17 +828,16 @@ p {
 .advantages__container-top-wrapper-item-content {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+  gap: 15px;
 }
 .advantages__container-top-wrapper-item-content h3 {
-  margin-bottom: 15px;
+  min-height: 27px;
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
   color: #004B98;
-}
-.advantages__container-top-wrapper-item-content p:not(:nth-last-of-type(1)) {
-  margin-bottom: 15px;
 }
 .advantages__container-bottom {
   background: linear-gradient(102deg, #36B0E1 0.45%, #0096D2 100%);
@@ -818,6 +916,8 @@ p {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  flex-grow: 1;
+  justify-content: space-between;
 }
 .advantages__container-bottom-slider-slide-content h3 {
   font-size: 24px;
@@ -825,6 +925,7 @@ p {
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
+  min-height: 66px;
 }
 .advantages__container-bottom-slider .swiper-pagination-bullets.swiper-pagination-bullets {
   bottom: 4px;
@@ -880,8 +981,8 @@ p {
   border-radius: 0 0 20px 20px;
   border: 1px solid #004B98;
   border-top: none;
-  align-content: stretch;
   flex-grow: 1;
+  gap: 10px;
 }
 .services__container-cards-card-description h3 {
   font-size: 24px;
@@ -889,11 +990,17 @@ p {
   font-weight: 500;
   line-height: normal;
   color: #004B98;
-  margin-bottom: 10px;
+  min-height: 66px;
+  max-height: 66px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 .services__container-cards-card-description p {
   font-size: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .services__container-cards-card-description .btn {
   max-width: 100%;
@@ -1984,5 +2091,350 @@ p {
 @media screen and (max-width: 7670px) {
   .contact__container-map iframe {
     min-height: 360px;
+  }
+}
+
+.details__container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.details__container-block {
+  display: flex;
+  gap: 20px;
+}
+@media screen and (max-width: 1023px) {
+  .details__container-block {
+    flex-direction: column;
+  }
+}
+.details__container-block:nth-child(even) {
+  flex-direction: row-reverse;
+}
+@media screen and (max-width: 1023px) {
+  .details__container-block:nth-child(even) {
+    flex-direction: column;
+  }
+}
+.details__container-block:nth-child(even) .details__container-block-content {
+  gap: 30px;
+}
+.details__container-block img {
+  max-width: 420px;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+  max-height: 420px;
+}
+@media screen and (max-width: 1023px) {
+  .details__container-block img {
+    max-width: 100%;
+  }
+}
+.details__container-block-content {
+  padding: 40px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 100%;
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+@media screen and (max-width: 767px) {
+  .details__container-block-content {
+    padding: 30px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .details__container-block-content {
+    padding: 20px;
+  }
+}
+.details__container-block-content h2 {
+  color: #004B98;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: none;
+}
+.details__container-block-content-list li {
+  position: relative;
+  margin-left: 35px;
+}
+.details__container-block-content-list li:before {
+  content: url(../images/check.svg);
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  left: -35px;
+  transform: translate(0, -15%);
+}
+.details__container-block-content ul {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.book__container-wrap {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+@media screen and (max-width: 990px) {
+  .book__container-wrap {
+    display: flex;
+    overflow-x: scroll;
+  }
+}
+.book__container-wrap-item {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  min-height: 434px;
+  height: auto;
+  position: relative;
+  overflow: hidden;
+  gap: 100px;
+}
+@media screen and (max-width: 990px) {
+  .book__container-wrap-item {
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 867px) {
+  .book__container-wrap-item {
+    max-width: 100%;
+    width: 100%;
+    min-width: calc(70% - 40px);
+  }
+}
+@media screen and (max-width: 550px) {
+  .book__container-wrap-item {
+    min-width: calc(100% - 40px);
+  }
+}
+.book__container-wrap-item-icon {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  border: 1px solid #004B98;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.book__container-wrap-item-icon svg {
+  max-width: 50px;
+  max-height: 50px;
+}
+.book__container-wrap-item-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  flex-grow: 1;
+}
+.book__container-wrap-item-content h3 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  min-height: 66px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  white-space: normal;
+  color: #004B98;
+}
+.book__container-wrap-item-content p:not(:nth-last-of-type(1)) {
+  margin-bottom: 15px;
+}
+
+.paint__container {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 20px;
+}
+@media screen and (max-width: 550px) {
+  .paint__container {
+    padding: 30px;
+  }
+}
+@media screen and (max-width: 367px) {
+  .paint__container {
+    padding: 20px;
+  }
+}
+.paint__container-blocks-title {
+  margin-bottom: 40px;
+}
+.paint__container-blocks-wrap {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+@media screen and (max-width: 1023px) {
+  .paint__container-blocks-wrap {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 550px) {
+  .paint__container-blocks-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.paint__container-blocks-wrap-item {
+  display: flex;
+  flex-direction: column;
+}
+.paint__container-blocks-wrap-item img {
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 230px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+.paint__container-blocks-wrap-item .paint-number {
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  color: #000;
+}
+.paint__container-blocks-wrap-item paint-name {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.benefits__container h2 {
+  padding: 38px 20px;
+  background-color: #004B98;
+  color: #ffffff;
+  text-align: center;
+  border-radius: 20px;
+}
+.benefits__container-content {
+  padding: 80px 60px 60px 60px;
+  background-color: #ffffff;
+  border-radius: 0 0 20px 20px;
+  margin-top: -20px;
+  z-index: -1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+@media screen and (max-width: 767px) {
+  .benefits__container-content {
+    padding: 60px 40px 40px 40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .benefits__container-content {
+    padding: 40px 20px 20px 20px;
+  }
+}
+.benefits__container-content-item {
+  color: #000;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  position: relative;
+}
+.benefits__container-content-item:not(:nth-last-of-type(1)):before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #C7C7C7;
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+}
+.benefits__container-content-item p {
+  max-width: 580px;
+  width: 100%;
+  text-align: left;
+  font: inherit;
+}
+.benefits__container-content-item span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  margin-right: auto;
+  border-radius: 50%;
+  border: 1px solid #2B2B2B;
+  min-width: 80px;
+}
+@media screen and (max-width: 367px) {
+  .benefits__container-content-item span {
+    min-width: 60px;
+    height: 60px;
+    width: 60px;
+  }
+}
+
+.clients__container-wrap {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+@media screen and (max-width: 867px) {
+  .clients__container-wrap {
+    display: flex;
+    overflow-y: scroll;
+  }
+}
+.clients__container-wrap-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  min-height: 300px;
+  height: auto;
+}
+.clients__container-wrap-item img {
+  height: auto;
+}
+@media screen and (max-width: 867px) {
+  .clients__container-wrap-item {
+    max-width: 100%;
+    width: 100%;
+    min-width: calc(70% - 40px);
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 867px) {
+  .clients__container-wrap-item {
+    min-width: calc(100% - 40px);
+    padding: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
