--- a/assets/style/_area-section.scss
+++ b/assets/style/_area-section.scss
@@ -56,13 +56,15 @@
             width: 100%;
             @media screen and (max-width:1023px) {
                 max-width: 100%;
+                width: 100%;
             }
             & img{
                 border-radius: inherit;
                 max-width: 100%;
+                width: 100%;
                 object-fit: cover;
-                height: 100%;
-                @media screen and (max-width:990px) {
+                height: auto;
+                @media screen and (max-width:1023px) {
                     min-height: 560px;
                     max-height: 560px;
                     height: 100%;
