--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1750,16 +1750,18 @@ p {
 @media screen and (max-width: 1023px) {
   .area__container-map {
     max-width: 100%;
+    width: 100%;
   }
 }
 .area__container-map img {
   border-radius: inherit;
   max-width: 100%;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  height: 100%;
+  height: auto;
 }
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1023px) {
   .area__container-map img {
     min-height: 560px;
     max-height: 560px;
