--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1759,7 +1759,7 @@ p {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  height: auto;
+  height: 100%;
 }
 @media screen and (max-width: 1023px) {
   .area__container-map img {
