--- a/assets/style/_area-section.scss
+++ b/assets/style/_area-section.scss
@@ -63,7 +63,7 @@
                 max-width: 100%;
                 width: 100%;
                 object-fit: cover;
-                height: auto;
+                height: 100%;
                 @media screen and (max-width:1023px) {
                     min-height: 560px;
                     max-height: 560px;
