--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -318,6 +318,31 @@ p {
   }
 }
 
+.sectionScroll {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.animate {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0px, 0px);
+  animation: example 1s;
+}
+
+@keyframes example {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(var(--startScrollTop, 150px));
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(calc(var(--scrollTop) / 10));
+  }
+}
 .white-block {
   display: inline-flex;
   padding: 10px 20px;
@@ -783,7 +808,7 @@ p {
   left: 0;
   width: 430px;
   height: 430px;
-  z-index: -1;
+  z-index: 0;
 }
 .advantages__container-top-wrapper-item-icon .circles .circle {
   position: absolute;
@@ -830,6 +855,7 @@ p {
   flex-direction: column;
   flex-grow: 1;
   gap: 15px;
+  z-index: 1;
 }
 .advantages__container-top-wrapper-item-content h3 {
   min-height: 27px;
