--- a/assets/style/_faq-section.scss
+++ b/assets/style/_faq-section.scss
@@ -5,6 +5,7 @@
             flex-direction: column;
             margin-bottom: 40px;
            gap: 10px;
+           overflow: hidden;
             &-item {
                 max-width: 100%;
                 width: 100%;
@@ -81,8 +82,24 @@
                     max-height: 0;
                     overflow: hidden;
                     transition: all .3s linear;
-                    padding: 0px 30px 0px 0px;
-                    
+                    padding: 0px;
+                    margin-top: 0px;
+                    font-size: 16px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: #ffffff;
+               
+                position: relative;
+                    & p{
+                      color: #000;
+                      font-size: 16px;
+                      font-style: normal;
+                      font-weight: 400;
+                      line-height: normal;
+                      max-height: inherit;
+                      transition: all .3s linear;
+                  }
                   }
                  
               }
@@ -95,23 +112,14 @@
                 max-height: 100vh;
                 overflow: visible;
                 padding: 80px 30px 30px 30px;
-                border-radius: 0 0 10px 10px;
-                font-size: 16px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background-color: #ffffff;
                 border: 1px solid #004B98;
+                border-top: none;
                 border-radius: 0px 0px 20px 20px;
                 margin-top: -54px;
                 z-index: -5;
-                position: relative;
+                
                 & p{
-                    color: #000;
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: normal
+                    height: inherit;
                 }
                 @media screen and (max-width:767px) {
                   padding: 74px 30px 30px 30px;
