--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1301,6 +1301,8 @@ p {
   border-radius: 500px;
   border: 1px solid #004B98;
   background-color: #ffffff;
+  position: relative;
+  z-index: 1;
 }
 @media screen and (max-width: 767px) {
   .faq__container-accord-item-top {
@@ -1361,14 +1363,8 @@ p {
   opacity: 0;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.3s linear;
-  padding: 0px;
-  margin-top: 0px;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
+  transition: 0.35s ease;
+  padding: 0px 30px 0px 30px;
   position: relative;
 }
 .faq__container-accord-item-bottom p {
@@ -1378,7 +1374,7 @@ p {
   font-weight: 400;
   line-height: normal;
   max-height: inherit;
-  transition: all 0.3s linear;
+  transition: 0.35s ease;
 }
 .faq__container .faq__container-accord-item:hover .faq__container-accord-item-top svg circle {
   fill: #36B0E1;
@@ -1393,9 +1389,14 @@ p {
   border-radius: 0px 0px 20px 20px;
   margin-top: -54px;
   z-index: -5;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
 }
 .faq__container .faq__container-accord-item.active .faq__container-accord-item-bottom p {
-  height: inherit;
+  max-height: inherit;
 }
 @media screen and (max-width: 767px) {
   .faq__container .faq__container-accord-item.active .faq__container-accord-item-bottom {
