--- a/assets/style/_universal-style.scss
+++ b/assets/style/_universal-style.scss
@@ -22,6 +22,7 @@
              gap: 40px;
              @media screen and (max-width:867px) {
                  width: 100%;
+                 border-radius: 0 0 0 0px;
              }
              @media screen and (max-width:550px) {
                 padding: 20px;
@@ -46,6 +47,7 @@
              gap: 20px;
              @media screen and (max-width:867px) {
                  width: 100%;
+                 border-radius: 0 0 20px 20px;
              }
              @media screen and (max-width:550px) {
                  padding: 20px;
