--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -703,6 +703,7 @@ p {
 @media screen and (max-width: 867px) {
   .grid-container-content-info {
     width: 100%;
+    border-radius: 0 0 0 0px;
   }
 }
 @media screen and (max-width: 550px) {
@@ -730,6 +731,7 @@ p {
 @media screen and (max-width: 867px) {
   .grid-container-content-description {
     width: 100%;
+    border-radius: 0 0 20px 20px;
   }
 }
 @media screen and (max-width: 550px) {
