--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -7,6 +7,17 @@
         width: 100%;
         height: auto;
         z-index: 50;
+       
+            &:after{
+                content: '';
+                position: absolute;
+                top: 62px;
+                left: 0;
+                width: 100%;
+                height: 1px;
+                background-color: $-gray-line;
+            }
+          
         }
         &__top{
             display: flex;
@@ -21,7 +32,19 @@
                 display: none;
                 .header__bottom-container-wrap & {
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: column-reverse;
+                    position: relative;
+                    width: 100%;
+                    gap: 20px;
+                    &:after{
+                        content: '';
+                        position: absolute;
+                        top: -30px;
+                        left: 0;
+                        width: 100%;
+                        height: 1px;
+                        background-color: $-gray-line;
+                    }
                 } 
             }
             
@@ -34,6 +57,10 @@
                     width: 100%;
                     height: 100%;
                     transition: all cubic-bezier(0.165, 0.84, 0.44, 1) .5s;
+                    @media screen and (max-width:1023px) {
+                        max-width: 55px;
+                       max-height: 55px;
+                    }
                     &:hover{
                         & svg circle{
                             fill: $-beruza;
@@ -45,10 +72,18 @@
                         width: 100%;
                         height: 100%;
                         transition: all cubic-bezier(0.165, 0.84, 0.44, 1) .5s;
+                        @media screen and (max-width:1023px) {
+                            max-width: 55px;
+                           max-height: 55px;
+                        }
                         & circle{
                             transition: all cubic-bezier(0.165, 0.84, 0.44, 1) .5s;
                         }
                     }
+                }
+                @media screen and (max-width:1023px) {
+                    width: 100%;
+                    gap: 10px;
                 }
             }
             &-contacts{
@@ -74,8 +109,12 @@
                     text-transform: uppercase;
                     max-width: fit-content;
                     transition: .3s ease;
+                    @media screen and (max-width:1023px) {
+                        max-width: 100%;
+                        width: 100%;
+                    }
                     @media screen and (max-width:367px) {
-                        gap: 15px;
+                        gap: 7px;
                     }
                         & svg{
                         min-height: 30px;   
@@ -83,6 +122,7 @@
                         max-height: 30px;
                         width: 100%;
                         height: 100%;
+                    
                 }
                         
                 }
@@ -94,8 +134,7 @@
                     }
                 }
                 @media screen and (max-width:1023px) {
-                    flex-direction: column;
-                    align-items: center;
+                   width: 100%;
                 }
             }
         }
@@ -106,7 +145,14 @@
             align-items: center;
             padding: 10px 0;
            justify-content: space-between;
+           position: relative;
+         
            & .logo{
+                max-width: 90px;
+                width: 100%;
+                & img{
+                    width: 100%;
+                }
             margin-right: auto;
            }
             &-wrap{
@@ -130,10 +176,12 @@
                         background-color: $-white;
                         transition: all .5s ease;
                         z-index: 20;
-                        padding: 0 10px;
+                        padding: 0 20px;
                         .open & {
                             top: 64px;
                             transform: scale(1);
+                            align-items: flex-start;
+                            gap: 30px;
                         }
                 }
                 & nav{
@@ -145,8 +193,9 @@
                         @media screen and (max-width:1023px) {
                             flex-direction: column;
                             gap: 10px;
+                            align-items: flex-start;
                         }
-                        .current-menu-item   {
+                        .current_page_item   {
                            &:after{
                                 width: 100%;
                             
@@ -160,6 +209,11 @@
                             line-height: normal;
                             transition: all cubic-bezier(0.165, 0.84, 0.44, 1) .5s;
                             position: relative;
+                            @media screen and (max-width:1023px){
+                                font-size: 24px;
+                                line-height: 32.78px;
+                                font-weight: 700;
+                            }
                             &:after{
                                 content: '';
                                 width: 0%;
@@ -188,63 +242,62 @@
                         }
                     }
                 }
-                
+                & .btn{
+                    @media screen and (max-width:1023px){
+                        max-width: 100%;
+                        margin-bottom: 30px;
+                        justify-content: center;
+                    }
+                }
             }
            
             .burgerBtn {
-
-              display: none;
-              @media  screen and (max-width:1023px) {
-                display: block;
-                width: 45px;
-                height: 45px;
-                background-color: $-beruza;
-                cursor: pointer;
-                position: relative;
-                border-radius: 5px;
-                .line {
-                    display: block;
-                    width: 30px;
+                display: none;
+              
+                @media screen and (max-width: 1023px) {
+                  display: block;
+                  width: 45px;
+                  height: 45px;
+                  border: 1px solid $-blue;
+                  background-color: $-blue;
+                  cursor: pointer;
+                  position: relative;
+                  border-radius: 50%;
+                  
+              
+                  .btn-menu-line {
+                    width: 27px;
                     height: 2px;
                     position: absolute;
-                    left: 0;
-                    top: 50%;
-                    transform: translate(25%, -50%);
-                    background-color: $-blue;
-            
-                    &:before,
-                    &:after {
-                        content: '';
-                        display: block;
-                        width: 30px;
-                        height: 2px;
-                        position: absolute;
-                        left: 0;
-                        background-color: $-blue;
-                        transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) .5s;
+                    left: 8px;
+                    background-color:$-white;
+                    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+                  }
+              
+                  .btn-menu-line1 {
+                    top: 17px;
+                  }
+              
+                  .btn-menu-line3 {
+                    bottom: 15px;
+                  }
+              
+                   .open &{
+                    .btn-menu-line1 {
+                      transform: rotate(45deg) translate(2px, 2px) scale(1.15) rotate(92deg);
                     }
-            
-                    &:after {
-                        top: 10px;
+              
+                    .btn-menu-line2 {
+                      opacity: 0;
                     }
-            
-                    &:before {
-                        bottom: 10px;
+              
+                    .btn-menu-line3 {
+                      transform: rotate(-45deg) translate(4px, -4px) scale(1.15) rotate(-92deg);
                     }
-                }
-                &.open {
-                    .line:after {
-                        top: 10px;
-                        transform: rotate(310deg) scale(.7) translate(12px, 8px);
-                    }
-            
-                    .line:before {
-                        bottom: 10px;
-                        transform: rotate(-310deg) scale(.7) translate(12px, -8px);
-                    }
+                  }
                 }
               }
-            }
+              
            }
         }
     }
