--- a/assets/style/_universal-style.scss
+++ b/assets/style/_universal-style.scss
@@ -1,4 +1,5 @@
 .grid-container{
+    border-radius: 20px;
         & img{
          border-radius: 20px 20px 0px 0px;
          object-fit: cover;
@@ -6,6 +7,7 @@
          max-height: 400px;
          min-height: 360px;
          height: 100%;
+         width: 100%;
         }
         &-content{
          display: flex;
