--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -84,6 +84,7 @@
                 @media screen and (max-width:1023px) {
                     width: 100%;
                     gap: 10px;
+                    justify-content: center;
                 }
             }
             &-contacts{
@@ -99,8 +100,9 @@
                     position: relative;
                     display: flex;
                     align-items: center;
+                    justify-content: center;
                     gap: 11px;
-                    padding: 0px 15px 0 0;
+                    padding: 5px 15px ;
                     text-overflow: ellipsis;
                     font-size: 14px;
                     font-style: normal;
@@ -109,19 +111,25 @@
                     text-transform: uppercase;
                     max-width: fit-content;
                     transition: .3s ease;
+                    position: relative;
                     @media screen and (max-width:1023px) {
                         max-width: 100%;
                         width: 100%;
                     }
                     @media screen and (max-width:367px) {
                         gap: 7px;
+                        justify-content: flex-end;
                     }
                         & svg{
+                            position: absolute;
+                            left: 0;
+                            top: 0;
                         min-height: 30px;   
                         max-width: 30px;
                         max-height: 30px;
                         width: 100%;
                         height: 100%;
+
                     
                 }
                         
