--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -11,7 +11,7 @@
             &:after{
                 content: '';
                 position: absolute;
-                top: 62px;
+                top: 67px;
                 left: 0;
                 width: 100%;
                 height: 1px;
@@ -102,7 +102,7 @@
                     align-items: center;
                     justify-content: center;
                     gap: 11px;
-                    padding: 5px 15px ;
+                    padding: 0px 15px  0 0;
                     text-overflow: ellipsis;
                     font-size: 14px;
                     font-style: normal;
@@ -115,22 +115,28 @@
                     @media screen and (max-width:1023px) {
                         max-width: 100%;
                         width: 100%;
+                        padding: 5px 15px;
                     }
-                    @media screen and (max-width:367px) {
-                        gap: 7px;
+                    @media screen and (max-width:467px) {
+                        gap: 10px;
                         justify-content: flex-end;
                     }
+                    @media screen and (max-width:367px) {
+                        gap: 10px;
+                        justify-content: center;
+                    }
                         & svg{
-                            position: absolute;
-                            left: 0;
-                            top: 0;
                         min-height: 30px;   
                         max-width: 30px;
                         max-height: 30px;
                         width: 100%;
                         height: 100%;
+                        @media screen and (max-width:1023px) {
+                            position: absolute;
+                            left: 0;
+                            top: 0;
+                        }
 
-                    
                 }
                         
                 }
@@ -143,6 +149,9 @@
                 }
                 @media screen and (max-width:1023px) {
                    width: 100%;
+                }
+                @media screen and (max-width:367px) {
+                   flex-direction: column;
                 }
             }
         }
@@ -186,7 +195,7 @@
                         z-index: 20;
                         padding: 0 20px;
                         .open & {
-                            top: 64px;
+                            top: 68px;
                             transform: scale(1);
                             align-items: flex-start;
                             gap: 30px;
