--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -7,16 +7,15 @@
         width: 100%;
         height: auto;
         z-index: 50;
-       
-            &:after{
-                content: '';
-                position: absolute;
-                top: 67px;
-                left: 0;
-                width: 100%;
-                height: 1px;
-                background-color: $-gray-line;
-            }
+        // &:after{
+        //     content: '';
+        //     position: absolute;
+        //     top: 67px;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 1px;
+        //     background-color: $-gray-line;
+        // }
           
         }
         &__top{
@@ -115,15 +114,15 @@
                     @media screen and (max-width:1023px) {
                         max-width: 100%;
                         width: 100%;
-                        padding: 5px 15px;
+                        padding: 5px 15px 5px 30px;
                     }
                     @media screen and (max-width:467px) {
                         gap: 10px;
-                        justify-content: flex-end;
+                        justify-content: center;
                     }
                     @media screen and (max-width:367px) {
                         gap: 10px;
-                        justify-content: center;
+                       
                     }
                         & svg{
                         min-height: 30px;   
@@ -157,10 +156,16 @@
         }
         &__bottom{
             background-color: $-white;
+            border-top: 1px solid var(--Gray-line, #C7C7C7);
+            border-bottom: 1px solid var(--Gray-line, #C7C7C7);
+            @media screen and (max-width:1023px){
+                border-top: none;
+            }
+
            &-container{
             display: flex;
             align-items: center;
-            padding: 10px 0;
+            padding: 9px 0;
            justify-content: space-between;
            position: relative;
          
@@ -195,7 +200,7 @@
                         z-index: 20;
                         padding: 0 20px;
                         .open & {
-                            top: 68px;
+                            top: 67px;
                             transform: scale(1);
                             align-items: flex-start;
                             gap: 30px;
@@ -236,7 +241,7 @@
                                 width: 0%;
                                 height: 2px;
                                 position: absolute;
-                                bottom: -20px;
+                                bottom: -22px;
                                 left: 0;
                                 background-color: $-beruza;
                                 transition: all cubic-bezier(0.165, 0.84, 0.44, 1) .5s;
