--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -441,15 +441,6 @@ p {
     height: auto;
     z-index: 50;
   }
-  .header:after {
-    content: "";
-    position: absolute;
-    top: 67px;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: #C7C7C7;
-  }
 }
 .header__top {
   display: flex;
@@ -556,19 +547,18 @@ p {
   .header__top-contacts a, .header__top-contacts span {
     max-width: 100%;
     width: 100%;
-    padding: 5px 15px;
+    padding: 5px 15px 5px 30px;
   }
 }
 @media screen and (max-width: 467px) {
   .header__top-contacts a, .header__top-contacts span {
     gap: 10px;
-    justify-content: flex-end;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 367px) {
   .header__top-contacts a, .header__top-contacts span {
     gap: 10px;
-    justify-content: center;
   }
 }
 .header__top-contacts a svg, .header__top-contacts span svg {
@@ -602,11 +592,18 @@ p {
 }
 .header__bottom {
   background-color: #ffffff;
+  border-top: 1px solid var(--Gray-line, #C7C7C7);
+  border-bottom: 1px solid var(--Gray-line, #C7C7C7);
+}
+@media screen and (max-width: 1023px) {
+  .header__bottom {
+    border-top: none;
+  }
 }
 .header__bottom-container {
   display: flex;
   align-items: center;
-  padding: 10px 0;
+  padding: 9px 0;
   justify-content: space-between;
   position: relative;
 }
@@ -646,7 +643,7 @@ p {
     padding: 0 20px;
   }
   .open .header__bottom-container-wrap {
-    top: 68px;
+    top: 67px;
     transform: scale(1);
     align-items: flex-start;
     gap: 30px;
@@ -688,7 +685,7 @@ p {
   width: 0%;
   height: 2px;
   position: absolute;
-  bottom: -20px;
+  bottom: -22px;
   left: 0;
   background-color: #36B0E1;
   transition: all cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s;
@@ -828,6 +825,11 @@ p {
   background: url(../images/main-img.jpg) center center/cover no-repeat;
   border-radius: 20px;
   padding: 60px 0 284px 40px;
+}
+@media screen and (max-width: 867px) {
+  .main__container {
+    padding: 60px 40px 284px 40px;
+  }
 }
 .main__container-content {
   max-width: 788px;
@@ -1690,7 +1692,7 @@ p {
   text-transform: none;
 }
 .footer__container-links-item-contacts a {
-  transition: 0.3s ease;
+  transition: 0.2s ease;
 }
 .footer__container-links-item-contacts a:hover {
   color: #36B0E1;
@@ -1710,7 +1712,7 @@ p {
 }
 @media (hover: hover) and (pointer: fine) {
   .footer__container-links-item nav ul li {
-    transition: 0.3s ease;
+    transition: 0.2s ease;
   }
   .footer__container-links-item nav ul li:hover {
     color: #36B0E1;
@@ -2353,6 +2355,7 @@ p {
     max-width: 100%;
     width: 100%;
     min-width: calc(70% - 40px);
+    min-height: auto;
   }
 }
 @media screen and (max-width: 550px) {
