--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1546,6 +1546,11 @@ p {
   margin-bottom: 20px;
   text-wrap: balance;
 }
+@media screen and (max-width: 550px) {
+  .consultation__container-text h2 {
+    font-size: 24px;
+  }
+}
 .consultation__container-text ul {
   display: flex;
   flex-direction: column;
