--- a/assets/style/_consultation-section.scss
+++ b/assets/style/_consultation-section.scss
@@ -29,6 +29,9 @@
             & h2{
                 margin-bottom: 20px;
                 text-wrap: balance;
+                @media screen and (max-width:550px) {
+                    font-size: 24px;
+                }
             }
             & ul{
                 display: flex;
